--- a/assessment.html
+++ b/assessment.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF=8">
     <title>あなたのいいところ診断</title>
+    <meta mame="twitter:card" content="summary"/>
+    <meta property="og:url" content="htttps://kiuti-creater.github.io/assessment/assessment.html" />
+    <meta property="og:title" content="あなたのいいところ診断"/>
+    <meta property="og:description" content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。" />
     <link rel="stylesheet" href="assessment.css">
   </head>
   <body>
