--- a/assessment.html
+++ b/assessment.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF=8">
     <meta name="twitter:card" content="summary" />
-    <meta property="og:url" content="https://あなたのユーザー名.github.io/assessment/assessment.html" />
+    <meta property="og:url" content="https://kiuti-creater.github.io/assessment/assessment.html" />
     <meta property="og:title" content="kiuti-createrが作ったあなたのいいところ診断" />
     <meta property="og:description" content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。" />
     <link rel="stylesheet" href="assessment.css">
